[gd_scene load_steps=37 format=2]

[ext_resource path="res://Animations/PoisonAnim.tres" type="Texture" id=1]
[ext_resource path="res://Sprites/Spritesheets/ExitTitle.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Spritesheets/Floor_Tileset.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Spritesheets/Wall_Tileset.png" type="Texture" id=4]
[ext_resource path="res://Audio/scifi.mp3" type="AudioStream" id=5]
[ext_resource path="res://Scenes/Game/CompanionCube.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Game/GUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Game/Player1.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Game/Key.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Game/PressurePlate.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Game/Door.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scripts/Levels/LevelThree.gd" type="Script" id=12]

[sub_resource type="ConvexPolygonShape2D" id=36]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=37]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=38]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=39]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=40]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=41]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=42]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=43]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=44]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=31]
2/name = "Floor_Tileset.png 2"
2/texture = ExtResource( 3 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Floor_Tileset.png 3"
3/texture = ExtResource( 3 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 64, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "PoisonAnim.tres 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "Floor_Tileset.png 5"
5/texture = ExtResource( 3 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 64, 0, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "Floor_Tileset.png 6"
6/texture = ExtResource( 3 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 128, 0, 64, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "Floor_Tileset.png 7"
7/texture = ExtResource( 3 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 64, 64, 64, 64 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "Floor_Tileset.png 8"
8/texture = ExtResource( 3 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 128, 64, 64, 64 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "Floor_Tileset.png 9"
9/texture = ExtResource( 3 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 128, 64, 64 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "Floor_Tileset.png 10"
10/texture = ExtResource( 3 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 64, 128, 64, 64 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "Floor_Tileset.png 11"
11/texture = ExtResource( 3 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 64, 128, 64, 64 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "Floor_Tileset.png 12"
12/texture = ExtResource( 3 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 64, 128, 64, 64 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "Floor_Tileset.png 13"
13/texture = ExtResource( 3 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 64, 128, 64, 64 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "Floor_Tileset.png 14"
14/texture = ExtResource( 3 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 128, 128, 64, 64 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0
15/name = "Floor_Tileset.png 15"
15/texture = ExtResource( 3 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 0, 192, 64, 64 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shape_offset = Vector2( 0, 0 )
15/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
15/shape_one_way = false
15/shape_one_way_margin = 0.0
15/shapes = [  ]
15/z_index = 0
16/name = "Wall_Tileset.png 16"
16/texture = ExtResource( 4 )
16/tex_offset = Vector2( 0, 0 )
16/modulate = Color( 1, 1, 1, 1 )
16/region = Rect2( 0, 0, 64, 64 )
16/tile_mode = 0
16/occluder_offset = Vector2( 0, 0 )
16/navigation_offset = Vector2( 0, 0 )
16/shape_offset = Vector2( 0, 0 )
16/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
16/shape = SubResource( 36 )
16/shape_one_way = false
16/shape_one_way_margin = 1.0
16/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 36 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
16/z_index = 0
17/name = "Wall_Tileset.png 17"
17/texture = ExtResource( 4 )
17/tex_offset = Vector2( 0, 0 )
17/modulate = Color( 1, 1, 1, 1 )
17/region = Rect2( 64, 0, 64, 64 )
17/tile_mode = 0
17/occluder_offset = Vector2( 0, 0 )
17/navigation_offset = Vector2( 0, 0 )
17/shape_offset = Vector2( 0, 0 )
17/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
17/shape = SubResource( 37 )
17/shape_one_way = false
17/shape_one_way_margin = 1.0
17/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 37 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
17/z_index = 0
18/name = "Wall_Tileset.png 18"
18/texture = ExtResource( 4 )
18/tex_offset = Vector2( 0, 0 )
18/modulate = Color( 1, 1, 1, 1 )
18/region = Rect2( 128, 0, 64, 64 )
18/tile_mode = 0
18/occluder_offset = Vector2( 0, 0 )
18/navigation_offset = Vector2( 0, 0 )
18/shape_offset = Vector2( 0, 0 )
18/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
18/shape = SubResource( 38 )
18/shape_one_way = false
18/shape_one_way_margin = 1.0
18/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 38 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
18/z_index = 0
19/name = "Wall_Tileset.png 19"
19/texture = ExtResource( 4 )
19/tex_offset = Vector2( 0, 0 )
19/modulate = Color( 1, 1, 1, 1 )
19/region = Rect2( 0, 64, 64, 64 )
19/tile_mode = 0
19/occluder_offset = Vector2( 0, 0 )
19/navigation_offset = Vector2( 0, 0 )
19/shape_offset = Vector2( 0, 0 )
19/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
19/shape = SubResource( 39 )
19/shape_one_way = false
19/shape_one_way_margin = 1.0
19/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 39 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
19/z_index = 0
20/name = "Wall_Tileset.png 20"
20/texture = ExtResource( 4 )
20/tex_offset = Vector2( 0, 0 )
20/modulate = Color( 1, 1, 1, 1 )
20/region = Rect2( 64, 64, 64, 64 )
20/tile_mode = 0
20/occluder_offset = Vector2( 0, 0 )
20/navigation_offset = Vector2( 0, 0 )
20/shape_offset = Vector2( 0, 0 )
20/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
20/shape = SubResource( 40 )
20/shape_one_way = false
20/shape_one_way_margin = 1.0
20/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 40 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
20/z_index = 0
21/name = "Wall_Tileset.png 21"
21/texture = ExtResource( 4 )
21/tex_offset = Vector2( 0, 0 )
21/modulate = Color( 1, 1, 1, 1 )
21/region = Rect2( 128, 64, 64, 64 )
21/tile_mode = 0
21/occluder_offset = Vector2( 0, 0 )
21/navigation_offset = Vector2( 0, 0 )
21/shape_offset = Vector2( 0, 0 )
21/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
21/shape = SubResource( 41 )
21/shape_one_way = false
21/shape_one_way_margin = 1.0
21/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 41 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
21/z_index = 0
22/name = "Wall_Tileset.png 22"
22/texture = ExtResource( 4 )
22/tex_offset = Vector2( 0, 0 )
22/modulate = Color( 1, 1, 1, 1 )
22/region = Rect2( 0, 128, 64, 64 )
22/tile_mode = 0
22/occluder_offset = Vector2( 0, 0 )
22/navigation_offset = Vector2( 0, 0 )
22/shape_offset = Vector2( 0, 0 )
22/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
22/shape = SubResource( 42 )
22/shape_one_way = false
22/shape_one_way_margin = 1.0
22/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 42 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
22/z_index = 0
23/name = "Wall_Tileset.png 23"
23/texture = ExtResource( 4 )
23/tex_offset = Vector2( 0, 0 )
23/modulate = Color( 1, 1, 1, 1 )
23/region = Rect2( 64, 128, 64, 64 )
23/tile_mode = 0
23/occluder_offset = Vector2( 0, 0 )
23/navigation_offset = Vector2( 0, 0 )
23/shape_offset = Vector2( 0, 0 )
23/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
23/shape = SubResource( 43 )
23/shape_one_way = false
23/shape_one_way_margin = 1.0
23/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 43 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
23/z_index = 0
24/name = "Wall_Tileset.png 24"
24/texture = ExtResource( 4 )
24/tex_offset = Vector2( 0, 0 )
24/modulate = Color( 1, 1, 1, 1 )
24/region = Rect2( 128, 128, 64, 64 )
24/tile_mode = 0
24/occluder_offset = Vector2( 0, 0 )
24/navigation_offset = Vector2( 0, 0 )
24/shape_offset = Vector2( 0, 0 )
24/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
24/shape = SubResource( 44 )
24/shape_one_way = false
24/shape_one_way_margin = 1.0
24/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 44 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
24/z_index = 0

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 256, 64 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 256, 64 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 256, 64 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 64, 256, 64 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 256, 64 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 128, 256, 64 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 192, 256, 64 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 192, 256, 64 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 256, 256, 64 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 256, 256, 64 )

[sub_resource type="SpriteFrames" id=32]
animations = [ {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=33]

[sub_resource type="RectangleShape2D" id=34]

[sub_resource type="RectangleShape2D" id=35]

[node name="LevelThree" type="Node2D"]
script = ExtResource( 12 )

[node name="PortalWalls" type="TileMap" parent="."]
light_mask = 7
tile_set = SubResource( 31 )
cell_tile_origin = 2
cell_clip_uv = true
format = 1
tile_data = PoolIntArray( -524317, 20, 0, -524316, 20, 0, -524315, 20, 0, -524314, 20, 0, -524313, 20, 0, -524312, 20, 0, -524311, 20, 0, -524310, 20, 0, -524309, 20, 0, -524308, 20, 0, -524307, 20, 0, -524306, 20, 0, -524302, 536870944, 0, -524301, 536870944, 0, -524300, 20, 0, -524299, 536870944, 0, -524298, 536870944, 0, -524296, 536870944, 0, -524295, 536870944, 0, -524294, 536870932, 0, -524293, -2147483628, 0, -524291, -2147483628, 0, -589817, 20, 0, -589816, 20, 0, -589809, -2147483628, 0, -589808, 20, 0, -589807, 20, 0, -589806, 20, 0, -589805, 20, 0, -589804, 20, 0, -589803, 20, 0, -589802, 20, 0, -589801, 20, 0, -589800, 20, 0, -589799, 20, 0, -589798, 20, 0, -589797, 20, 0, -589796, 20, 0, -589795, 20, 0, -589794, 20, 0, -589793, 20, 0, -589792, 20, 0, -589791, 20, 0, -458754, 23, 0, -458753, 23, 0, -524288, 23, 0, -524272, 20, 0, -524271, 20, 0, -524270, 20, 0, -524269, 20, 0, -524268, 20, 0, -524267, 20, 0, -524266, 20, 0, -524265, 20, 0, -524264, 20, 0, -524263, 20, 0, -524262, 20, 0, -524261, 20, 0, -524260, 20, 0, -524259, 20, 0, -524258, 20, 0, -524257, 20, 0, -524256, 20, 0, -524255, 20, 0, -393219, 21, 0, -393218, 2, 0, -393217, 8, 0, -458752, 2, 0, -458751, 19, 0, -458734, 20, 0, -458733, 20, 0, -458732, 20, 0, -458731, 20, 0, -458730, 20, 0, -458729, 20, 0, -458728, 20, 0, -458727, 20, 0, -458726, 20, 0, -458725, 20, 0, -458724, 20, 0, -458723, 20, 0, -458722, 20, 0, -458721, 20, 0, -458720, 20, 0, -458719, 20, 0, -327683, 21, 0, -327682, 8, 0, -327681, 2, 0, -393216, 8, 0, -393215, 19, 0, -393199, 20, 0, -393198, 20, 0, -393197, 20, 0, -393196, 20, 0, -393195, 20, 0, -393194, 20, 0, -393193, 20, 0, -393192, 20, 0, -393191, 20, 0, -393190, 20, 0, -393189, 20, 0, -393188, 20, 0, -393187, 20, 0, -393186, 20, 0, -393185, 20, 0, -393184, 20, 0, -393183, 20, 0, -262147, 21, 0, -262146, 2, 0, -262145, 8, 0, -327680, 2, 0, -327679, 19, 0, -327662, 20, 0, -327661, 20, 0, -327660, 20, 0, -327659, 20, 0, -327658, 20, 0, -327657, 20, 0, -327656, 20, 0, -327655, 20, 0, -327654, 20, 0, -327653, 20, 0, -327652, 20, 0, -327651, 20, 0, -327650, 20, 0, -327649, 20, 0, -327648, 20, 0, -327647, 20, 0, -196611, 21, 0, -196610, 8, 0, -196609, 2, 0, -262144, 8, 0, -262143, 19, 0, -262126, 20, 0, -262125, 20, 0, -262124, 20, 0, -262123, 20, 0, -262122, 20, 0, -262121, 20, 0, -262120, 20, 0, -262119, 20, 0, -262118, 20, 0, -262117, 20, 0, -262116, 20, 0, -262115, 20, 0, -262114, 20, 0, -262113, 20, 0, -262112, 20, 0, -262111, 20, 0, -131075, 21, 0, -131074, 2, 0, -131073, 8, 0, -196608, 2, 0, -196607, 19, 0, -196591, 20, 0, -196590, 20, 0, -196589, 20, 0, -196588, 20, 0, -196587, 20, 0, -196586, 20, 0, -196585, 20, 0, -196584, 20, 0, -196583, 20, 0, -196582, 20, 0, -196581, 20, 0, -196580, 20, 0, -196579, 20, 0, -196578, 20, 0, -196577, 20, 0, -196576, 20, 0, -196575, 20, 0, -65552, 536870932, 0, -65539, 21, 0, -65538, 8, 0, -65537, 2, 0, -131072, 8, 0, -131071, 22, 0, -131070, 23, 0, -131053, 20, 0, -131052, 20, 0, -131051, 20, 0, -131050, 20, 0, -131049, 20, 0, -131048, 20, 0, -131047, 20, 0, -131046, 20, 0, -131045, 20, 0, -131044, 20, 0, -131043, 20, 0, -131042, 20, 0, -131041, 20, 0, -131040, 20, 0, -131039, 20, 0, -16, 536870932, 0, -3, 21, 0, -2, 2, 0, -1, 8, 0, -65536, 2, 0, -65535, 8, 0, -65534, 2, 0, -65533, 19, 0, -65516, 20, 0, -65515, 20, 0, -65514, 20, 0, -65513, 20, 0, -65512, 20, 0, -65511, 20, 0, -65510, 20, 0, -65509, 20, 0, -65508, 20, 0, -65507, 20, 0, -65506, 20, 0, -65505, 20, 0, -65504, 20, 0, -65503, 20, 0, 65520, 536870932, 0, 65533, 21, 0, 65534, 8, 0, 65535, 2, 0, 0, 8, 0, 1, 2, 0, 2, 8, 0, 3, 19, 0, 18, 20, 0, 20, 20, 0, 21, 20, 0, 22, 20, 0, 23, 20, 0, 24, 20, 0, 25, 20, 0, 26, 20, 0, 27, 20, 0, 28, 20, 0, 29, 20, 0, 30, 20, 0, 31, 20, 0, 32, 20, 0, 33, 20, 0, 131069, 21, 0, 131070, 2, 0, 131071, 8, 0, 65536, 2, 0, 65537, 8, 0, 65538, 2, 0, 65539, 19, 0, 65554, 20, 0, 65556, 20, 0, 65557, 20, 0, 65558, 20, 0, 65559, 20, 0, 65560, 20, 0, 65561, 20, 0, 65562, 20, 0, 65563, 20, 0, 65564, 20, 0, 65565, 20, 0, 65566, 20, 0, 65567, 20, 0, 65568, 20, 0, 65569, 20, 0, 196592, 20, 0, 196604, 20, 0, 196605, 21, 0, 196606, 8, 0, 196607, 2, 0, 131072, 8, 0, 131073, 16, 0, 131074, 17, 0, 131090, 20, 0, 131092, 20, 0, 131093, 20, 0, 131094, 20, 0, 131095, 20, 0, 131096, 20, 0, 131097, 20, 0, 131098, 20, 0, 131099, 20, 0, 131100, 20, 0, 131101, 20, 0, 131102, 20, 0, 131103, 20, 0, 131104, 20, 0, 131105, 20, 0, 262140, 20, 0, 262141, 21, 0, 262142, 2, 0, 262143, 8, 0, 196608, 2, 0, 196609, 19, 0, 196628, 20, 0, 196629, 20, 0, 196630, 20, 0, 196631, 20, 0, 196632, 20, 0, 196633, 20, 0, 196634, 20, 0, 196635, 20, 0, 196636, 20, 0, 196637, 20, 0, 196638, 20, 0, 196639, 20, 0, 196640, 20, 0, 196641, 20, 0, 327676, 20, 0, 327677, 21, 0, 327678, 8, 0, 327679, 2, 0, 262144, 8, 0, 262145, 19, 0, 262161, 20, 0, 262162, 20, 0, 262163, 20, 0, 262164, 20, 0, 262165, 20, 0, 262166, 20, 0, 262167, 20, 0, 262168, 20, 0, 262169, 20, 0, 262170, 20, 0, 262171, 20, 0, 262172, 20, 0, 262173, 20, 0, 262174, 20, 0, 262175, 20, 0, 262176, 20, 0, 262177, 20, 0, 393213, 21, 0, 393214, 2, 0, 393215, 8, 0, 327680, 2, 0, 327681, 19, 0, 327697, 20, 0, 327698, 20, 0, 327699, 20, 0, 327700, 20, 0, 327701, 20, 0, 327702, 20, 0, 327703, 20, 0, 327704, 20, 0, 327705, 20, 0, 327706, 20, 0, 327707, 20, 0, 327708, 20, 0, 327709, 20, 0, 327710, 20, 0, 327711, 20, 0, 327712, 20, 0, 327713, 20, 0, 458749, 21, 0, 458750, 8, 0, 458751, 2, 0, 393216, 8, 0, 393217, 19, 0, 393233, 20, 0, 393234, 20, 0, 393235, 20, 0, 393236, 20, 0, 393237, 20, 0, 393238, 20, 0, 393239, 20, 0, 393240, 20, 0, 393241, 20, 0, 393242, 20, 0, 393243, 20, 0, 393244, 20, 0, 393245, 20, 0, 393246, 20, 0, 393247, 20, 0, 393248, 20, 0, 393249, 20, 0, 524285, 21, 0, 524286, 2, 0, 524287, 8, 0, 458752, 2, 0, 458753, 19, 0, 458769, 20, 0, 458770, 20, 0, 458771, 20, 0, 458772, 20, 0, 458773, 20, 0, 458774, 20, 0, 458775, 20, 0, 458776, 20, 0, 458777, 20, 0, 458778, 20, 0, 458779, 20, 0, 458780, 20, 0, 458781, 20, 0, 458782, 20, 0, 458783, 20, 0, 458784, 20, 0, 458785, 20, 0, 589821, 21, 0, 589822, 8, 0, 589823, 2, 0, 524288, 8, 0, 524289, 19, 0, 524290, 20, 0, 524291, 20, 0, 524305, 20, 0, 524306, 20, 0, 524307, 20, 0, 524308, 20, 0, 524309, 20, 0, 524310, 20, 0, 524311, 20, 0, 524312, 20, 0, 524313, 20, 0, 524314, 20, 0, 524315, 20, 0, 524316, 20, 0, 524317, 20, 0, 524318, 20, 0, 524319, 20, 0, 524320, 20, 0, 524321, 20, 0, 655357, 21, 0, 655358, 2, 0, 655359, 536870920, 0, 589824, 2, 0, 589825, 19, 0, 589826, 20, 0, 589827, 20, 0, 589828, 20, 0, 589829, 20, 0, 589840, 20, 0, 589841, 20, 0, 589842, 20, 0, 589843, 20, 0, 589844, 20, 0, 589845, 20, 0, 589846, 20, 0, 589847, 20, 0, 589848, 20, 0, 589849, 20, 0, 589850, 20, 0, 589851, 20, 0, 589852, 20, 0, 589853, 20, 0, 589854, 20, 0, 589855, 20, 0, 589856, 20, 0, 589857, 20, 0, 655389, 20, 0, 655390, 20, 0, 655391, 20, 0, 655392, 20, 0, 655393, 20, 0 )

[node name="Camera2D2" type="Camera2D" parent="."]
position = Vector2( 0, 40.088 )
scale = Vector2( 9.69149, 1.18687 )
current = true
zoom = Vector2( 2, 2 )

[node name="CompanionCube" parent="." instance=ExtResource( 6 )]
position = Vector2( 122, 38 )

[node name="PressurePlate" parent="." instance=ExtResource( 10 )]
position = Vector2( -72, -74 )

[node name="Door" parent="." instance=ExtResource( 11 )]
position = Vector2( -32, -182 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 5 )
volume_db = -10.0
autoplay = true

[node name="Player" parent="." instance=ExtResource( 8 )]
position = Vector2( -26.9128, 535.738 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -32.0918, 613.518 )
scale = Vector2( 0.524762, 0.507862 )
frames = SubResource( 32 )
frame = 2
playing = true

[node name="Node2D" parent="." instance=ExtResource( 9 )]
position = Vector2( -33, -408 )
scale = Vector2( 4.3117, 5.51429 )

[node name="Elevator" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Elevator" groups=["Elevator"]]
position = Vector2( -27.5412, 706.73 )
scale = Vector2( 7.41623, -2.93422 )
shape = SubResource( 33 )

[node name="ExitBlocker" type="KinematicBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitBlocker"]
position = Vector2( -30.7014, 647.397 )
scale = Vector2( 10.6, 1 )
shape = SubResource( 34 )

[node name="Tutorial" type="Node2D" parent="."]

[node name="Greetings" type="Node2D" parent="Tutorial"]

[node name="Greetings" type="Area2D" parent="Tutorial/Greetings" groups=["Greetings"]]
position = Vector2( -24.0271, 539.275 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tutorial/Greetings/Greetings"]
scale = Vector2( 4.21605, 3.51313 )
shape = SubResource( 35 )

[node name="Text" type="PopupDialog" parent="Tutorial/Greetings"]
visible = true
margin_left = -504.538
margin_top = 174.907
margin_right = -464.538
margin_bottom = 214.907
rect_scale = Vector2( 23.9525, 10.3935 )

[node name="Button" type="Button" parent="Tutorial/Greetings/Text"]
margin_left = 16.6406
margin_top = 31.3916
margin_right = 85.6406
margin_bottom = 51.3916
rect_scale = Vector2( 0.0848309, 0.229596 )
text = "Continue"

[node name="Label" type="Label" parent="Tutorial/Greetings/Text"]
margin_left = 2.94897
margin_top = 5.01619
margin_right = 378.949
margin_bottom = 87.0162
rect_scale = Vector2( 0.0893336, 0.189961 )
text = "Here a door is in between you and the key, lucky for you
we have given you a companion cube and a pressure plate.
The pressure plate needs a lot of weight to activate, the
companion cube should be heavy enough. Use your robotic
strength and pick up the companion cube with the Space
key. Placing it over the pressure plate should open the door"
align = 3

[node name="CanvasLayer" parent="." instance=ExtResource( 7 )]
pause_mode = 2

[connection signal="area_entered" from="Elevator" to="." method="_on_Elevator_area_entered"]
[connection signal="area_entered" from="Tutorial/Greetings/Greetings" to="." method="_on_Greetings_area_entered"]
[connection signal="button_down" from="Tutorial/Greetings/Text/Button" to="." method="_on_Button_button_down"]
